[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/game_object_scripts/Draggable.gd" type="Script" id=1]
[ext_resource path="res://textures/game_item_textures/wheel.png" type="Texture" id=2]
[ext_resource path="res://scripts/game_object_scripts/Wheel.gd" type="Script" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 20.0

[node name="Wheel" type="Node2D"]
script = ExtResource( 3 )

[node name="PhysBody" type="RigidBody2D" parent="."]
collision_layer = 2
collision_mask = 3
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PhysBody"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="PhysBody"]
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 2 )
[connection signal="mouse_entered" from="PhysBody" to="." method="_on_WheelBody_mouse_entered"]
[connection signal="mouse_exited" from="PhysBody" to="." method="_on_WheelBody_mouse_exited"]
